--- a/src/backend/index.html
+++ b/src/backend/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.bundle.css">
     <title>Solid Incarnation</title>
   </head>
 
   <body>
-    <h1>Solid Incarnation</h1>
+    <div id='root'/>
+    <script src="main.bundle.js"></script>
   </body>
 </html>
